--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"gitsave": "git add . && git commit -m \"commit\" && git push origin main",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"predeploy": "npm run build",
